parse whole site as well as single page